--- a/index.html
+++ b/index.html
@@ -1,1 +1,56 @@
+<!DOCTYPE html>
+<html lang="vi">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>CV - Nguyễn Văn A</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
+  <link rel="stylesheet" href="css/style.css">
+</head>
+<body class="bg-light">
+  <div class="container mt-5">
+    <div class="card shadow p-4">
+      <div class="row">
+        <!-- Avatar -->
+        <div class="col-md-4 text-center">
+          <img src="assets/profile.jpg" alt="Avatar" class="img-fluid rounded-circle shadow" style="max-width: 200px;">
+        </div>
+        <!-- Info -->
+        <div class="col-md-8">
+          <h1 class="text-primary">Nguyễn Văn A</h1>
+          <p><strong>Email:</strong> nguyenvana@example.com</p>
+          <p><strong>Điện thoại:</strong> 0123-456-789</p>
+          <p><strong>Địa chỉ:</strong> TP. Hà Nội</p>
+          <hr/>
+          <h4>Giới thiệu</h4>
+          <p>Mình là một lập trình viên web yêu thích làm việc với Vue.js, .NET và các công nghệ hiện đại.</p>
+        </div>
+      </div>
+
+      <hr class="my-4" />
+
+      <h4>Kỹ năng</h4>
+      <ul>
+        <li>HTML, CSS, JavaScript, Bootstrap</li>
+        <li>Vue.js, React, Node.js</li>
+        <li>ASP.NET Core, SQL Server</li>
+      </ul>
+
+      <h4>Học vấn</h4>
+      <p>Đại học Bách Khoa Hà Nội - Công nghệ thông tin (2019 - 2023)</p>
+
+      <h4>Kinh nghiệm</h4>
+      <p><strong>Công ty ABC</strong> - Thực tập sinh lập trình Web (6/2022 - 12/2022)</p>
+      <p>Phát triển website quản lý sinh viên, áp dụng Vue.js và .NET.</p>
+
+      <h4>Dự án cá nhân</h4>
+      <ul>
+        <li><strong>Website Quản Lý Sinh Viên</strong> - Vue + SQL Server</li>
+        <li><strong>Portfolio cá nhân</strong> - React + Firebase</li>
+      </ul>
+
+    </div>
+  </div>
+</body>
+</html>
 
