--- a/index.html
+++ b/index.html
@@ -46,7 +46,47 @@
 
     <div class="mb-4">
       <h5 class="section-title">SUMMARY</h5>
-      <p>I am currently a final-year Information Technology student at Ho Chi Minh Education UniversityUniversity, seeking an internship opportunity to enhance my skills...</p>
+      <p>I am currently a final-year Information Technology student at Ho Chi Minh Education University    body {
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #f9f9f9;
+    }
+    .cv-container {
+      max-width: 850px;
+      margin: 40px auto;
+      background-color: #fff;
+      padding: 40px;
+      box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+    }
+    .section-title {
+      border-left: 5px solid #0d6efd;
+      padding-left: 10px;
+      margin-bottom: 20px;
+      font-weight: bold;
+    }
+    .project-title {
+      font-weight: bold;
+    }
+    .profile-pic {
+      width: 120px;
+      height: 120px;
+      object-fit: cover;
+      border-radius: 50%;
+    }
+  </style>
+</head>
+<body>
+  <div class="cv-container">
+    <div class="d-flex align-items-center mb-4">
+      <img src="assets/profile.jpg" alt="Profile" class="profile-pic me-4">
+      <div>
+        <h3 class="mb-0">Tu Tấn Chung</h3>
+        <p class="text-muted">Web Developer (Intern)</p>
+      </div>
+    </div>
+
+    <div class="mb-4">
+      <h5 class="section-title">SUMMARY</h5>
+      <p>I am currently a final-year Information Technology student at Ho Chi Minh Education University, seeking an internship opportunity to enhance my skills...</p>
     </div>
 
     <div class="mb-4">
@@ -68,9 +108,9 @@
     <div class="mb-4">
       <h5 class="section-title">PROJECT</h5>
 
-      <p class="project-title">Laptop E-commerce Website <span class="text-muted">(March 2025 – Present)</span></p>
-      <p><strong>Role:</strong> Member | <strong>Team size:</strong> 6</p>
-      <p><strong>Description:</strong> Website uses Node.js (Express) and MongoDB, ReactJS, TypeScript, Bootstrap...</p>
+      <p class="project-title">Name <span class="text-muted">(2024 – Present)</span></p>
+      <p><strong>Role:</strong>  | <strong>Team size:</strong> 6</p>
+      <p><strong>Description:</strong> </p>
       <ul>
         <li>CRUD products, best-selling items, JWT authentication.</li>
         <li>Add to cart, track orders, manage quantity.</li>
